[tool.poetry]

name = "gvm"
version = "0.0.1"

description = "Gradle Version Manager"

license = "MIT"

homepage = "https://github.com/carljdp/gvm"
repository = "https://github.com/carljdp/gvm"
authors = ["Carl J du Preez <carljdp@gmail.com>"]
maintainers = ["Carl J du Preez <carljdp@gmail.com>"]

keywords = ["gradle", "version", "manager"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

# the package metadata
packages = [
    { include = "gvm", from = "src" }
]

# the cli entrypoint
[tool.poetry.scripts]
gvm = "gvm.main:main"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
psutil = "^6.0.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
pyinstaller = "^4.5.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
